modified html with h1 and h3 text

--- a/countries.html
+++ b/countries.html
@@ -9,7 +9,16 @@
     <title>Countries of the World</title>
 </head>
 <body>
-   <div id="country-container"></div>
+    <div class="text-container">
+        <h1>En oversikt over alle land med noen attributter</h1>
+        <h3>Europian Countries</h3>
+        <h3>American Countries</h3>
+        <h3>Asian Countries</h3>
+        <h3>Oceanic Countries</h3>
+        <h3>African Countries</h3>
+        <h3>States belonging to Antarctica</h3>
+        <div id="country-container"></div>
+    </div>
    <script src = "countries.js"></script> 
 </body>
 </html>
