--- a/countries.html
+++ b/countries.html
@@ -11,12 +11,12 @@
 <body>
     <div class="text-container">
         <h1>En oversikt over alle land med noen attributter</h1>
-        <h3>Europian Countries</h3>
-        <h3>American Countries</h3>
-        <h3>Asian Countries</h3>
-        <h3>Oceanic Countries</h3>
-        <h3>African Countries</h3>
-        <h3>States belonging to Antarctica</h3>
+        <h3 id="no1">Europian Countries</h3>
+        <h3 id="no2">American Countries</h3>
+        <h3 id="no3">Asian Countries</h3>
+        <h3 id="no4">Oceanic Countries</h3>
+        <h3 id="no5">African Countries</h3>
+        <h3 id="no6">States belonging to Antarctica</h3>
         <div id="country-container"></div>
     </div>
    <script src = "countries.js"></script> 
