--- a/countries.html
+++ b/countries.html
@@ -11,6 +11,10 @@
 <body>
     <div class="text-container">
         <h1>En oversikt over alle land med noen attributter</h1>
+        <div id="searchWrapper">
+            <input type="text" name="search-bar" id="search-bar" placeholder="Search for a country" />
+            <ul id="country-list"></ul>
+        </div>
         <h3 id="no1">Europian Countries</h3>
         <h3 id="no2">American Countries</h3>
         <h3 id="no3">Asian Countries</h3>
