--- a/countries.html
+++ b/countries.html
@@ -11,7 +11,7 @@
 <body>
     <div class="text-container">
         <h1>En oversikt over alle land med noen attributter</h1>
-        <div id="searchWrapper">
+        <div class ="searchWrapper">
             <input type="text" name="search-bar" id="search-bar" placeholder="Search for a country" />
             <ul id="country-list"></ul>
         </div>
